[package]
name = "uac-bypass"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uac_bypass"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
obfstr = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = false
